module3/nginx2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx2
  name: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - image: harbor.nsx.techlab.netone.co.jp/handson/nginx:2.0
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx2
  name: nginx2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx2
