module3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: contour
  name: nginx
spec:
  rules:
  - host: ${NS}.tanzu.techlab.netone.co.jp
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /n1
        pathType: Exact
      - backend:
          service:
            name: nginx2
            port:
              number: 80
        path: /n2
        pathType: Exact
